--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,8 @@ github_username:  arkon
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+# Enable asset processing
+assets:
+  js_compressor:  uglifier
+  css_compressor: sass
